--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "sweetalert2": "^11.4.17",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "emoji-picker-react": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
