--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "react-to-pdf": "^0.0.14",
     "sweetalert2": "^11.4.17",
     "web-vitals": "^2.1.4"
   },
