--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "emoji-picker-react": "^3.5.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-datetime-picker": "^3.5.0",
@@ -17,8 +18,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "sweetalert2": "^11.4.17",
-    "web-vitals": "^2.1.4",
-    "emoji-picker-react": "^3.5.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
