--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "react-toastify": "^9.0.4",
     "sass": "^1.52.3",
     "sweetalert2": "^11.4.17",
     "web-vitals": "^2.1.4"
