--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,19 +5,24 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@stripe/react-stripe-js": "^1.8.1",
+    "@stripe/stripe-js": "^1.32.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-datetime-picker": "^3.5.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-to-pdf": "^0.0.14",
+    "stripe": "^9.8.0",
     "sweetalert2": "^11.4.17",
     "web-vitals": "^2.1.4"
   },
