--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@stripe/react-stripe-js": "^1.8.1",
-    "@stripe/stripe-js": "^1.32.0"
+    "@stripe/stripe-js": "^1.32.0",
+    "react-redux": "^8.0.2"
   }
 }
