--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "emoji-picker-react": "^3.5.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "chart.js": "^3.8.0",
     "react-chartjs-2": "^4.2.0",
     "react-datetime-picker": "^3.5.0",
     "react-dom": "^18.1.0",
