--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,9 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
+    "react-datepicker": "^4.8.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
-    "react-to-pdf": "^0.0.14",
     "stripe": "^9.8.0",
     "react-pro-sidebar": "^0.7.1",
     "react-toastify": "^9.0.4",
