--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
+    "cors": "^2.8.5",
     "emoji-picker-react": "^3.5.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
